@@ -29,7 +29,7 @@ check_PROGRAMS =
 TESTS =
 EXTRA_LIBRARIES =
 EXTRA_DIST = PROJECTS cftests cpascal.h help.h w2c/config.h
-DISTCLEANFILES = $(EXTRA_LIBRARIES)
+DISTCLEANFILES = $(EXTRA_LIBRARIES) CXXLD.sh
 CLEANFILES =
 TRIPTRAP_CLEAN =
 TRIPTRAP =
