@@ -159,6 +159,8 @@ EXTRA_DIST += $(web_tests)
 
 ## bibtex.test
 DISTCLEANFILES += tests/xexampl.aux tests/xexampl.bbl tests/xexampl.blg
+## tests/bibtex-longline-test.pl
+DISTCLEANFILES += longline.aux longline.bbl longline.bib longline.blg
 ## tests/bibtex-mem.test
 EXTRA_DIST += tests/memdata1.bst tests/memdata2.bst tests/memdata3.bst
 DISTCLEANFILES += tests/memtest.bib tests/memtest?.*
