@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/web2c/web2c/
 ##
-## Copyright (C) 2009, 2010 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2011 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../../m4
@@ -73,3 +73,6 @@ stamp-makecpool: makecpool$(EXEEXT)
 	echo timestamp >$@
 
 CLEANFILES = $(nodist_noinst_DATA)
+
+distclean-local:
+	rm -rf kpathsea w2c
